Removed filter by custom components